--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
