--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-uuid": "^2.0.3",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "uuid": "^11.0.3"
